<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       tools:context=".ui.authenticationFragment">
        <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_main_icon"
                android:id="@+id/imageView" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.19"/>
        <TextView
                style="@style/TextAppearance.Flupic.AuthHeadText"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAuth"
                app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>


        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Flupic.TextInputLayout.Auth"
                android:id="@+id/emailEditText"
                android:hint="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/textAuth" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="32dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="@style/TextAppearance.Flupic.InputAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailInput"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Flupic.TextInputLayout.Auth"
                android:id="@+id/passwordEditText"
                android:hint="@string/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText">

            <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="@style/TextAppearance.Flupic.InputAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordInput"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           style="@style/Widget.Flupic.ButtonAuth2"
                                                           android:text="@string/log_in"
                                                           app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:id="@+id/logInButton"/>

        <com.google.android.material.button.MaterialButton
                android:text="@string/auth_sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.Flupic.ButtonAuth"
                android:id="@+id/signUpButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

