<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.registrationFragment">

        <TextView
                style="@style/TextAppearance.Flupic.AuthHeadText"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAuth" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.100000024" android:textSize="30sp"/>
        <TextView
                android:text="@string/sign_up_to_join_our_cooking_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textAuth" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditText"
                style="@style/Widget.Flupic.TextInputLayout.Reg"
                android:hint="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="0.25"
                android:layout_marginEnd="32dp" android:layout_marginStart="32dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="@style/TextAppearance.Flupic.InputAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailInput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bioEditText"
                style="@style/Widget.Flupic.TextInputLayout.Reg"
                android:hint="@string/fullname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/emailEditText" android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="@style/TextAppearance.Flupic.InputAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bioInput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameEditText"
                style="@style/Widget.Flupic.TextInputLayout.Reg"
                android:hint="@string/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/bioEditText" android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="@style/TextAppearance.Flupic.InputAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/usernameInput"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditText"
                style="@style/Widget.Flupic.TextInputLayout.Reg"
                android:hint="@string/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp" android:layout_marginStart="32dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/usernameEditText">

            <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="@style/TextAppearance.Flupic.InputAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordInput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_heart"
                android:id="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="4dp"/>

        <com.google.android.material.button.MaterialButton android:layout_width="0dp"
                                                           android:layout_height="wrap_content"
                                                           android:layout_marginTop="8dp"
                                                           app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           android:layout_marginEnd="32dp"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:layout_marginStart="32dp" android:text="@string/sign_up"
                                                           android:id="@+id/signUpButton"/>
        <ImageButton
                android:src="@drawable/ic_arrow_back"
                android:backgroundTint="@color/colorOnFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/backButton" android:layout_marginTop="4dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

