<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <variable name="location" type="com.example.flupic.domain.FireUserLocation"/>
    </data>

    <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            app:shimmer_highlight_alpha="0.5"
            app:shimmer_base_alpha="1"
            app:shimmer_auto_start="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
                                                           android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           tools:context=".ui.dialogue.businessLocationDialogueFragment">


            <TextView
                    style="@style/TextAppearance.Flupic.Warning"
                    android:text="@string/are_you_sure_you_want_to_set_this_location_as_a_business_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/warningText" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"/>
            <TextView
                    app:setCurLocation="@{location}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/curLocationText" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/warningText" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:text="@string/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yesButton"
                    app:layout_constraintTop_toBottomOf="@+id/curLocationText" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="4dp"/>
            <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                    android:text="@string/no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/noButton" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/curLocationText"
                    app:layout_constraintEnd_toStartOf="@+id/yesButton"
                    android:layout_marginEnd="4dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>
</layout>

