<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:tools="http://schemas.android.com/tools"
                                                       android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       tools:context=".ui.addTools.recipeAdd">

        <View android:layout_width="320dp" android:layout_height="1dp"
              android:backgroundTint="@color/colorOnSecond"
              android:background="#57212121"
              android:id="@+id/view3"
              android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.100000024"/>


        <TextView
                android:text="@string/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/view3" android:layout_marginTop="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingrNameText"
                style="@style/Widget.Flupic.TextInputLayout.Reg"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nameText" android:layout_marginTop="8dp"
                android:hint="@string/ingedient_name">

            <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="@style/TextAppearance.Flupic.InputAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ingrNameInput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ingCountText"
                style="@style/Widget.Flupic.TextInputLayout.Reg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/ingrNameText"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/nameText" android:layout_marginTop="8dp" android:hint="@string/amount">

            <com.google.android.material.textfield.TextInputEditText
                    android:textAppearance="@style/TextAppearance.Flupic.InputAuth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ingCountInput"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                           android:layout_height="wrap_content"
                                                           style="@style/Widget.MaterialComponents.Button"
                                                           android:layout_marginTop="8dp"
                                                           app:layout_constraintTop_toBottomOf="@+id/ingCountText"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           android:layout_marginEnd="8dp" android:text="@string/add_ingredient"
                                                           android:id="@+id/addIng"/>


        <com.google.android.material.card.MaterialCardView android:layout_width="0dp"
                                                           android:layout_height="0dp"
                                                           app:layout_constraintBottom_toBottomOf="parent"
                                                           app:layout_constraintEnd_toEndOf="parent"
                                                           app:layout_constraintStart_toStartOf="parent"
                                                           android:layout_margin="8dp" android:layout_marginTop="8dp"
                                                           app:layout_constraintTop_toBottomOf="@+id/addIng">

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:id="@+id/recyclerView"/>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

