<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            app:shimmer_highlight_alpha="0.5"
            app:shimmer_base_alpha="1"
            app:shimmer_auto_start="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
                app:layoutDescription="@xml/recipe_motion"
                android:id="@+id/add_motion_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.inside.addFragment">


            <androidx.viewpager.widget.ViewPager android:layout_width="match_parent"
                                                 android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
                                                 android:id="@+id/viewPager2" tools:layout_editor_absoluteX="0dp">

            </androidx.viewpager.widget.ViewPager>

            <com.rd.PageIndicatorView
                    android:id="@+id/pageIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:piv_interactiveAnimation="true"
                    app:piv_selectedColor="@color/secondaryColor"
                    app:piv_unselectedColor="@android:color/darker_gray"
                    app:piv_viewPager="@id/viewPager2"
                    app:piv_animationType="scale_down"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/viewPager2"/>


            <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                               android:layout_height="wrap_content"
                                                               style="@style/Widget.MaterialComponents.Button.TextButton"
                                                               app:layout_constraintTop_toTopOf="parent"
                                                               app:layout_constraintStart_toStartOf="parent"
                                                               android:id="@+id/prevButton"
                                                               android:textColor="@color/secondaryVariantColor"
                                                               android:text="@string/previous"/>

            <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                               android:layout_height="wrap_content"
                                                               style="@style/Widget.MaterialComponents.Button.TextButton"
                                                               app:layout_constraintTop_toTopOf="parent"
                                                               app:layout_constraintEnd_toEndOf="parent"
                                                               android:textColor="@color/secondaryVariantColor"
                                                               android:text="@string/next"
                                                               android:id="@+id/nextButton"/>

            <com.google.android.material.button.MaterialButton android:layout_width="wrap_content"
                                                               android:layout_height="wrap_content"
                                                               style="@style/Widget.MaterialComponents.Button.TextButton"
                                                               android:textColor="@color/secondaryVariantColor"
                                                               app:layout_constraintTop_toTopOf="parent"
                                                               app:layout_constraintEnd_toEndOf="parent"
                                                               android:text="@string/done"
                                                               android:id="@+id/doneButton"/>

        </androidx.constraintlayout.motion.widget.MotionLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>



</layout>

